--- a/config/mosquitto.conf
+++ b/config/mosquitto.conf
@@ -3,5 +3,5 @@ persistence_location /mosquitto/data/
 log_dest file /mosquitto/log/mosquitto.log
 
 ## Authentication ##
-# allow_anonymous false
-# password_file /mosquitto/config/password.txt
+allow_anonymous false
+password_file /mosquitto/config/password.txt
