--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,13 @@ version: "3"
 
 services:
   mosquitto:
+    container_name: mosquitto
     image: eclipse-mosquitto
+    networks:
+      - energymonnetwork
     volumes:
       - ./:/mosquitto/:rw
     ports:
       - 1883:1883
       - 9001:9001
+    restart: unless-stopped
