--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,6 +61,7 @@ services:
       - 3080:80
       
   node-red:
+    container_name: nodered
     image: nodered/node-red:latest
     restart: unless-stopped
     environment:
