--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -72,7 +72,7 @@ services:
     ports:
       - "1880:1880"
     volumes:
-      - node-red-data:/data
+      - "${DATADIR}/node-red-data:/data"
 
 volumes:
   node-red-data:
